samples/_failures_safe/1761474654_c1831a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_606e5ac0.c: In function ‘main’:
./samples/SAFE/__tmp_606e5ac0.c:137:5: error: expected declaration or statement at end of input
  137 |     int entry_count = 0;
      |     ^~~
